Introducidas imagenes y la foto de la portada

--- a/Latex/0main.tex
+++ b/Latex/0main.tex
@@ -81,13 +81,13 @@
 \LARGE{Grado en Ingeniería Electrónica, Mecatrónica y Robótica}\\
 \rule{\textwidth}{0.1mm}
 %  %%%%% Este trozo de codigo es para insertar imagenes %%%%%%%
-%\begin{figure}[h!]
-%	\centering
-%	\includegraphics[width=1\textwidth]{brazo_portada}
+\begin{figure}[h!]
+	\centering
+	\includegraphics[width=.7\textwidth]{robot_portada}
 	%\caption{textodelaleyenda}
-%\end{figure}
+\end{figure}
 % %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\vspace{3cm}
+\vspace{1cm}
 \rule{\textwidth}{0.1mm}
 \Large{\textbf{Autores:} Montes Grova, Marco Antonio\\
  Lozano Romero, Daniel\\
