COmentado los anexos

--- a/Latex/0main.tex
+++ b/Latex/0main.tex
@@ -468,12 +468,12 @@ Será necesario definir el valor de la ganancia de la función de transferencia 
 	\subsubsection{Control a una postura}
 \subsection{Ley de control \textit{Persecución pura}}
 
-\section{Anexos y conclusiones}
-\subsection{Codigos de programacion}
-\subsubsection{Pruebas del modelo cinematico directo}
-\lstinputlisting[caption = {caption caption caption}]{pruebasMCD.m}
-\newpage
-\subsubsection{Pruebas del modelo cinematico inverso}
-\lstinputlisting[caption = {caption caption caption}]{pruebasMCI.m}
+%\section{Anexos y conclusiones}
+%\subsection{Codigos de programacion}
+%\subsubsection{Pruebas del modelo cinematico directo}
+%\lstinputlisting[caption = {caption caption caption}]{pruebasMCD.m}
+%\newpage
+%\subsubsection{Pruebas del modelo cinematico inverso}
+%\lstinputlisting[caption = {caption caption caption}]{pruebasMCI.m}
 
 \end{document}
